#272 When user moves student in other classroom, the wrong classroom page is displayed. update

--- a/app/views/users/dashboard_classroom.html.erb
+++ b/app/views/users/dashboard_classroom.html.erb
@@ -162,7 +162,7 @@
           <% end %>
           <% if can? :edit, kid %>
             <td class="minimal">
-              <%= link_to 'Edit', edit_kid_path(kid, url: dashboard_classroom_path, school: @current_school ), class: 'btn btn-warning btn-simple btn-extended' %>
+              <%= link_to 'Edit', edit_kid_path(kid, url: dashboard_classroom_path ), class: 'btn btn-warning btn-simple btn-extended' %>
             </td>
           <% end %>
           <% if can? :destroy, kid %>
