--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -47,7 +47,13 @@
             <%= f.text_field :email, placeholder: 'Email', class: 'form-control' %>
           </div>
         </div>
-
+        <div class="form-group">
+          <%= f.label :avatar, "Avatar", class: "col-sm-4 control-label text-main" %>
+          <div class="col-sm-8">
+            <%= f.file_field :avatar, as: :file %>
+            <p class="help-block">Preferable image 100x100 pixels.</p>
+          </div>
+        </div>
         <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
           <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
         <% end %>
