#285 "Submit" button is shifted down.

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -181,6 +181,9 @@ table.table.fit.schools tr{height:50px; border-bottom: 1px solid #dddddd;}
   color: green;
   border: 1px solid green;
 }
+.btnSubmitActivities{
+  margin-top: -3px;
+}
 .noactivities{
   color: black;
   border: 1px solid grey;
