#281 The avatar's teacher and parent are the same.

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -24,8 +24,14 @@
       <% @users.each do |user| %>
         <tr class="text-center v-middle">
           <td class="minimal">
-            <%= link_to users_admin_path(user) do %>
-              <%= image_tag 'teacher_avatar.png' %>
+            <% if user.role.name == 'Parent' %>
+             <%= link_to users_admin_path(user) do %>
+                <%= image_tag 'parent_avatar_small.png' %>
+              <% end %>
+            <% else %>
+              <%= link_to users_admin_path(user) do %>
+                <%= image_tag 'teacher_avatar.png' %>
+              <% end %>
             <% end %>
           </td>
 
