#286 validations for empty names fields

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,6 +30,7 @@ $color-info-em: #0087be;
 $color-success: #167f3a;
 $color-success-em: #147134;
 $color-main: #363636;
+$color-error-lst: #FF0000;
 
 @import "*";
 
