--- a/app/views/triggers/_form.html.erb
+++ b/app/views/triggers/_form.html.erb
@@ -1,9 +1,18 @@
 <%= render 'shared/section_title', title: @trigger.new_record? ? 'Create New Trigger' : 'Editing Trigger' %>
-
 <div class="container kmSection">
   <%= form_for(@trigger, html: {class: 'form-horizontal form-classic form-vpad'}) do |f| %>
     <%= render 'shared/error_messages', object: @trigger %>
     <div class="row">
+      <div class="col-md-7 col-md-offset-3">
+        <% if flash[:errors] %>
+          <div class="errors-list">
+            <h3>error prohibited this trigger from being saved:</h3>
+            <% flash[:errors].each do |e| %>
+              <p>- <%= e %></p>
+            <% end %>
+          </div>
+        <% end %>
+      </div>
       <div class="col-md-6 col-md-offset-3">
         <%= render 'form_object_dropdown', f: f, type: :bubble_group, options: BubbleGroup.all %>
         <%= render 'form_object_dropdown', f: f, type: :bubble, options: Bubble.all %>
