--- a/app/views/kids/_form.html.erb
+++ b/app/views/kids/_form.html.erb
@@ -123,7 +123,7 @@
           </div>
         </div>
         <div class="row text-center actions">
-          <%= link_to 'Cancel', params[:url] || kids_path, class: 'btn btn-large btn-warning btn-wide btn-simple' %>
+          <%= link_to 'Cancel', params[:url] || kids_path(classroom_id: @kid.classroom.id), class: 'btn btn-large btn-warning btn-wide btn-simple' %>
           <% if @kid.persisted? %>
             <%= link_to 'Delete', @kid, method: :delete,  class: 'btn btn-danger btn-large btn-wide btn-simple' %>
             <%= f.submit 'Confirm', class: 'btn btn-info btn-large btn-wide btn-simple' %>
