#288 When user clicks on the "Update" button, notification of successful update isn't displayed.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,7 +46,7 @@ a, a:focus, a:hover, a:active {display:inline-block; text-decoration:none;}
 .font-xlarge {font-size:18px;}
 .font-xxlarge {font-size:22px;}
 .text-main {color:$color-main;}
-.text-brand {color:$color-brand-fade;}
+.text-notification {color:$color-error-lst;}
 .text-info {color:$color-info;}
 .centered{text-align:center;}
 .righty{float:right;}
