--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -1,4 +1,8 @@
 <%= render 'shared/section_title', title: 'Show School' %>
+<% if notice %>
+  <h4 class="text-center text-notification"><%= notice %></h4>
+<% end %>
+
 <div class="container kmSection">
   <div class="row">
     <div class="col-md-12">
