#290  When the user type 200 symbols, the page is shifted right.

--- a/app/views/bubbles/show.html.erb
+++ b/app/views/bubbles/show.html.erb
@@ -21,7 +21,7 @@
         <tr class="no-border-top">
           <td colspan="999">
             <span class="font-large">Description:</span>
-            <h4 class="text-main"><%= @bubble.description %></h4>
+            <h4 class="text-main text-cut"><%= @bubble.description %></h4>
           </td>
         </tr>
         </tbody>
