--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -177,6 +177,7 @@ table.table.fit.schools tr{height:50px; border-bottom: 1px solid #dddddd;}
   text-align: center;
   border-radius: 15px;
 }
+.text-cut{word-wrap: break-word;word-break: break-word;}
 .activities{ color: green;  border: 1px solid green; }
 .errors-list{ color: $color-error-lst; }
 .btnSubmitActivities{
