#287 Different distance between the buttons.

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -182,6 +182,7 @@ table.table.fit.schools tr{height:50px; border-bottom: 1px solid #dddddd;}
 .btnSubmitActivities{
   margin-top: -3px;
 }
+.activitiesClassroom{width: 155px;}
 .noactivities{
   color: black;
   border: 1px solid grey;
