--- a/app/views/users/teacher_mode.html.erb
+++ b/app/views/users/teacher_mode.html.erb
@@ -1,12 +1,12 @@
 <div class="iFrameGames">
   <% ["Counting and Cardinality to 20", "Base 10 How Many", "Base 10 Produce", "Number Line Model", "Addition and Subtraction"].each_with_index do |game, index| %>
     <% css_class = index > 0 ? 'inactive' : '' %>
-    <%= link_to game, 'http://emotionrays.com/_demo3/', class: "btn btn-simple btn-warning submenu #{css_class} gameBtn" %>
+    <%= link_to game, 'http://kidsplaymath.org/home/games/'+index+'/KPMGames.html', class: "btn btn-simple btn-warning submenu #{css_class} gameBtn" %>
     <br>
   <% end %>
 </div>
 <div class="iframe">
-  <iframe name="ifrm" id="game_ifrm" src="http://emotionrays.com/_demo2/" frameborder="0">
+  <iframe name="ifrm" id="game_ifrm" src='http://kidsplaymath.org/home/games/0/KPMGames.html' frameborder="0">
     Your browser doesn't support iframes.
   </iframe>
 </div>
