--- a/app/views/users/teacher_mode.html.erb
+++ b/app/views/users/teacher_mode.html.erb
@@ -1,7 +1,7 @@
 <div class="iFrameGames">
   <% ["Counting and Cardinality to 20", "Base 10 How Many", "Base 10 Produce", "Number Line Model", "Addition and Subtraction"].each_with_index do |game, index| %>
     <% css_class = index > 0 ? 'inactive' : '' %>
-    <%= link_to game, 'http://kidsplaymath.org/home/games/'+ index.to_s +'/KPMGames.html', class: "btn btn-simple btn-warning submenu #{css_class} gameBtn" %>
+    <%= link_to game, ('http://kidsplaymath.org/home/games/'+ index.to_s +'/KPMGames.html'), class: "btn btn-simple btn-warning submenu #{css_class} gameBtn" %>
     <br>
   <% end %>
 </div>
