--- a/app/views/users/teacher_mode.html.erb
+++ b/app/views/users/teacher_mode.html.erb
@@ -6,7 +6,7 @@
   <% end %>
 </div>
 <div class="iframe">
-  <iframe name="ifrm" id="game_ifrm" src='http://kidsplaymath.org/home/games/0/KPMGames.html' frameborder="0">
+  <iframe name="ifrm" id="game_ifrm" src='http://kidsplaymath.org/home/games/0/KPMGames.html' frameborder="0" width="100%">
     Your browser doesn't support iframes.
   </iframe>
 </div>
