--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -7,7 +7,7 @@
     <p>Dear <%= @user.full_name %>,</p>
     <p>Your account has been successfully created.</p>
     <p>Here is your new password: <%= @user.password %></p>
-    <p>Now you can login this path: <%= root_url %></p>
+    <p>Now you can login this path: http://portal.kidsplaymath.org/</p>
     <p>
       Regards,<br>
       Kids Play Math
