--- a/app/views/users/activities.html.erb
+++ b/app/views/users/activities.html.erb
@@ -120,7 +120,7 @@
 <div class="container">
   <div class="row">
     <div class="actions ">
-      <div class="col-sm-offset-8 col-sm-4 text-center"><h4>Set Time for Selected Bubble Groups:</h4></div>
+      <div class="col-sm-offset-8 col-sm-4 text-center"><h4>Set Time for Selected Bubble Groups::</h4></div>
     </div>
   </div>
   <div class="row">
